[package]
name = "instruction-data"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["solana-nostd-entrypoint", "solana-program"]
pinocchio = ["dep:pinocchio", "typhoon-program/pinocchio"]

[dependencies]
bytemuck.workspace = true
typhoon-accounts.workspace = true
typhoon-account-macro.workspace = true
typhoon-context.workspace = true
typhoon-context-macro.workspace = true
typhoon-handler-macro.workspace = true
typhoon-program.workspace = true
typhoon-program-id-macro.workspace = true
typhoon-space.workspace = true
typhoon-traits.workspace = true
pinocchio = { workspace = true, optional = true }
solana-nostd-entrypoint = { workspace = true, optional = true }
solana-program = { workspace = true, optional = true }

[dev-dependencies]
litesvm.workspace = true
solana-sdk.workspace = true
