[package]
name = "instruction-data"
version = "0.1.0"
edition = "2021"
publish = false

[features]
logging = []

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
typhoon = { path = "../../crates/lib" }

[dev-dependencies]
litesvm = "0.7"
solana-instruction = "2.3"
solana-keypair = "2.2"
solana-native-token = "2.3"
solana-pubkey = "2.3"
solana-signer = "2.2"
solana-system-interface = "1.0.0"
solana-transaction = "2.2"
typhoon-instruction-builder = { path = "../../crates/instruction-builder" }

[profile.release]
lto = true
codegen-units = 1
