[package]
name = "seeded"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["solana-nostd-entrypoint", "solana-program"]
pinocchio = ["dep:pinocchio", "typhoon/pinocchio"]

[dependencies]
pinocchio = { git = "https://github.com/febo/pinocchio", optional = true }
solana-nostd-entrypoint = { git = "https://github.com/cavemanloverboy/solana-nostd-entrypoint", optional = true }
solana-program = { version = "1.18", optional = true }
typhoon = { path = "../../crates/lib" }
zerocopy = { version = "0.8.14", features = ["derive"] }

[dev-dependencies]
litesvm = "0.4.0"
solana-sdk = "2.1"
