[package]
name = "seeded"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["solana-nostd-entrypoint", "solana-program"]
pinocchio = ["dep:pinocchio", "typhoon/pinocchio"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
pinocchio = { git = "https://github.com/febo/pinocchio", optional = true }
solana-nostd-entrypoint = { git = "https://github.com/cavemanloverboy/solana-nostd-entrypoint", rev = "b752d70", optional = true }
solana-program = { version = "2.1", optional = true }
typhoon = { path = "../../crates/lib" }

[dev-dependencies]
litesvm = "0.5.0"
solana-sdk = "2.1.10"
